* The call to wmiexec.py has been replaced with impacket-wmiexec, because
  the symlink has been added in Debian Stretch with python-impacket 0.9.15-1.
* An issue which could have caused a truncated string in register_service()
  has been fixed.
* Improve signal handling when update vhosts list.
* Increase size of buffer for preferences to allow for up to 105K NVTs.

openvas-scanner 6.0.1 (2019-07-17)

This is the first patch release of the openvas-scanner module 6.0 for the
Greenbone Vulnerability Management (GVM) framework.

Main changes compared to openvas-scanner 6.0.0:
* An issue which caused the scanner to crash when a plugin is missing
  during a scan has been addressed.
* An issue which caused a plugin to hang in nasl_pread() has been addressed.
* Lower-case format is used for values added from add_host_name().
* Do not launch the scan if the nvticache is corrupted or an error is detected
  during the plugin schedule process.
* Issues in building process have been addressed.
* An issue which caused the manager to consider a scan as finished when it was
  actually stopped has been addressed.
* An issue which caused possible null IP values in OTP results has been
  addressed.
* An issue which caused forgotten children of children processes has been
  addressed.
* The unfinished Advanced log feature has been removed.
* An issue which caused a plugin to finished immediately when a wrong
  custom timeout was sent from the manager has been addressed.
* An issue which caused a scan to hang for ever if there was no redis kb
  available has been addressed.
* An issue which caused a plugin to use the default port when a custom port
  is given has been addressed.


openvas-scanner 6.0.0 (2019-04-05)

This is the first release of the openvas-scanner module 6.0 for the
Greenbone Vulnerability Management (GVM) framework.

This version inherits all elements of the former openvas-libraries that were
used by OpenVAS Scanner only.
